# spacex-bot

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/cli/: commands.py
app/clients/: spacex_client.py
app/core/: config.py  database.py  logger.py
app/models/: launch.py
app/repositories/: launch_repository.py
app/services/: db_service.py  extractor_service.py  filter_service.py  metrics_service.py  query_service.py  report_service.py  sync_service.py  transform_service.py
reports/: launches.csv  report_20260425_101202.html  report_20260425_101400.html  report_20260425_101449.html  report_20260425_101951.html  report_failed_m3_20260425_100920.html
tests/e2e/: test_cli.py  test_report.py
tests/unit/: test_cli.py  test_metrics.py  test_metrics_empty.py
