[project]
name = "spacex-bot"
version = "1.0.0"
description = "CLI automation bot that consumes SpaceX public API, stores data in PostgreSQL, and generates analytical HTML reports."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "typer>=0.12.3",
    "rich>=13.7.1",
    "requests>=2.32.3",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.36",
    "psycopg2-binary>=2.9.9",
    "pandas>=2.2.3",
    "jinja2>=3.1.4",
    "plotly>=5.24.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=6.0.0",
    "playwright>=1.58.0"
]

[dependency-groups]
dev = [
    "playwright>=1.58.0",
]
